# MFCMouseEffect

./: .clocignore  .gitignore  AGENTS.md  MFCMouseEffect.slnx  PRIVACY.md  PRIVACY.zh-CN.md  README.en.md  README.md  README.zh-CN.md  build.bat  mfx  mfx.cmd  windows-manual-handoff.md
MFCMouseEffect/Platform/: CMakeLists.txt  CMakePresets.json  IPlatformAppShell.h  PlatformAppShellFactory.cpp  PlatformAppShellFactory.h  PlatformApplicationCatalog.cpp  PlatformApplicationCatalog.h  PlatformBinaryResourceLoader.cpp  PlatformBinaryResourceLoader.h  PlatformControlMessageCodecFactory.cpp  PlatformControlMessageCodecFactory.h  PlatformControlServicesFactory.cpp  PlatformControlServicesFactory.h  PlatformDisplayTopology.cpp  PlatformDisplayTopology.h  PlatformEffectFallbackFactory.cpp  PlatformEffectFallbackFactory.h  PlatformEntryArgs.h  PlatformEntryRunner.cpp  PlatformEntryRunner.h  PlatformHoldRuntimeFactory.cpp  PlatformHoldRuntimeFactory.h  PlatformInputServicesFactory.cpp  PlatformInputServicesFactory.h  PlatformLaunchAtStartup.cpp  PlatformLaunchAtStartup.h  PlatformNativeFolderPicker.cpp  PlatformNativeFolderPicker.h  PlatformOverlayCoordSpaceFactory.cpp  PlatformOverlayCoordSpaceFactory.h  PlatformOverlayServicesFactory.cpp  PlatformOverlayServicesFactory.h  PlatformPetVisualHost.cpp  PlatformPetVisualHost.h  PlatformRuntimeEnvironment.cpp  PlatformRuntimeEnvironment.h  PlatformShellServicesFactory.cpp  PlatformShellServicesFactory.h  PlatformStartupOptionsFactory.cpp  PlatformStartupOptionsFactory.h  (+8 more)
MFCMouseEffect/Platform/linux/: CMakeLists.txt
MFCMouseEffect/Platform/linux/Shell/: LinuxEventLoopService.cpp  LinuxEventLoopService.h  LinuxSettingsLauncher.cpp  LinuxSettingsLauncher.h  LinuxShellServicesFactory.cpp  LinuxShellServicesFactory.h  LinuxSingleInstanceGuard.cpp  LinuxSingleInstanceGuard.h  LinuxTrayService.cpp  LinuxTrayService.h  LinuxUserNotificationService.cpp  LinuxUserNotificationService.h  README.md
MFCMouseEffect/Platform/macos/: CMakeLists.txt
MFCMouseEffect/Platform/macos/Control/: MacosDispatchMessageCodec.cpp  MacosDispatchMessageCodec.h  MacosDispatchMessageHost.Timers.cpp  MacosDispatchMessageHost.cpp  MacosDispatchMessageHost.h
MFCMouseEffect/Platform/macos/Effects/: MacosClickPulseEffect.cpp  MacosClickPulseEffect.h  MacosClickPulseEffect.mm  MacosClickPulseOverlayBridge.swift  MacosClickPulseOverlayRenderer.cpp  MacosClickPulseOverlayRenderer.h  MacosClickPulseOverlayRenderer.mm  MacosClickPulseOverlayRendererCore.Internal.h  MacosClickPulseOverlayRendererCore.Layers.cpp  MacosClickPulseOverlayRendererCore.Layers.mm  MacosClickPulseOverlayRendererCore.Plan.cpp  MacosClickPulseOverlayRendererCore.Plan.mm  MacosClickPulseOverlayRendererCore.cpp  MacosClickPulseOverlayRendererCore.h  MacosClickPulseOverlayRendererCore.mm  MacosClickPulseOverlayStyle.cpp  MacosClickPulseOverlayStyle.h  MacosClickPulseOverlayStyle.mm  MacosClickPulseOverlaySwiftBridge.h  MacosClickPulseWindowRegistry.h  MacosClickPulseWindowRegistry.mm  MacosEffectComputeProfileAdapter.cpp  MacosEffectComputeProfileAdapter.h  MacosEffectCreatorRegistry.Internal.h  MacosEffectCreatorRegistry.Table.cpp  MacosEffectCreatorRegistry.cpp  MacosEffectRenderProfile.ClickTrail.cpp  MacosEffectRenderProfile.ScrollHoldHover.cpp  MacosEffectRenderProfile.Shared.h  MacosEffectRenderProfile.h  MacosHoldPulseEffect.h  MacosHoldPulseEffect.mm  MacosHoldPulseOverlayBridge.swift  MacosHoldPulseOverlayRenderer.h  MacosHoldPulseOverlayRenderer.mm  MacosHoldPulseOverlayRendererCore.Internal.h  MacosHoldPulseOverlayRendererCore.Start.cpp  MacosHoldPulseOverlayRendererCore.Start.mm  MacosHoldPulseOverlayRendererCore.State.mm  MacosHoldPulseOverlayRendererCore.Update.mm  (+89 more)
MFCMouseEffect/Platform/macos/Overlay/: MacosCursorDecorationBridge.swift  MacosCursorDecorationSwiftBridge.h  MacosInputIndicatorBridge.swift  MacosInputIndicatorOverlay.Display.cpp  MacosInputIndicatorOverlay.Lifecycle.cpp  MacosInputIndicatorOverlay.Probes.cpp  MacosInputIndicatorOverlay.ShowPlan.cpp  MacosInputIndicatorOverlay.Style.cpp  MacosInputIndicatorOverlay.Style.h  MacosInputIndicatorOverlay.Style.mm  MacosInputIndicatorOverlay.cpp  MacosInputIndicatorOverlay.h  MacosInputIndicatorOverlay.mm  MacosInputIndicatorOverlayInternals.cpp  MacosOverlayCoordSpaceBridge.swift  MacosOverlayCoordSpaceConversion.cpp  MacosOverlayCoordSpaceService.h  MacosOverlayCoordSpaceService.mm  MacosOverlayCoordSpaceSwiftBridge.h
MFCMouseEffect/Platform/macos/Pet/: MacosMouseCompanionBridge.swift  MacosMouseCompanionPhase1Bridge.swift  MacosMouseCompanionPhase1SwiftBridge.h  MacosMouseCompanionSwiftBridge.h
MFCMouseEffect/Platform/macos/Shell/: MacosDpiAwarenessService.cpp  MacosDpiAwarenessService.h  MacosEventLoopBridge.h  MacosEventLoopBridge.mm  MacosEventLoopService.RunLoop.cpp  MacosEventLoopService.cpp  MacosEventLoopService.h  MacosSettingsLauncher.cpp  MacosSettingsLauncher.h  MacosSettingsLauncherBridge.swift  MacosSettingsLauncherSwiftBridge.h  MacosShellServicesFactory.cpp  MacosShellServicesFactory.h  MacosShellSmokeMain.cpp  MacosSingleInstanceGuard.cpp  MacosSingleInstanceGuard.h  MacosTrayMenuBridge.swift  MacosTrayMenuFactory.cpp  MacosTrayMenuFactory.h  MacosTrayMenuFactory.mm  MacosTrayMenuLocalization.cpp  MacosTrayMenuLocalization.h  MacosTrayMenuLocalization.mm  MacosTrayMenuSwiftBridge.h  MacosTrayRuntimeHelpers.h  MacosTrayRuntimeHelpers.mm  MacosTrayService.cpp  MacosTrayService.h  MacosTrayService.mm  MacosTraySmokeMain.cpp  MacosTraySmokeMain.mm  MacosUserNotificationBridge.swift  MacosUserNotificationService.AppleScript.cpp  MacosUserNotificationService.Internal.h  MacosUserNotificationService.cpp  MacosUserNotificationService.h  MacosUserNotificationSwiftBridge.h  README.md
MFCMouseEffect/Platform/macos/System/: MacosAppleScriptFolderPicker.Execution.mm  MacosAppleScriptFolderPicker.Internal.h  MacosAppleScriptFolderPicker.Script.mm  MacosAppleScriptFolderPicker.ScriptHelpers.h  MacosAppleScriptFolderPicker.h  (+43 more)
MFCMouseEffect/Platform/posix/: CMakeLists.txt
MFCMouseEffect/Platform/windows/: CMakeLists.txt
(+1774 files in other folders)
